--- a/Unu/Unu.cbp
+++ b/Unu/Unu.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="converter.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="converter.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
